# nvim_lua

./: .gitconfig  .gitignore  .luarc.json  .wezterm.config  .wezterm.lua  README.md  init.lua  keybindings.json  lazy-lock.json  settings.json
after/ftplugin/: markdown.lua
lua/: cli_chat.lua  lsp.lua  mappings.lua  myutils.lua  parsers.lua  plugins.lua  session_utils.lua  settings.lua  telescope_utils.lua  toggleterm_utils.lua
lua/mlua_example/: Cargo.toml
lua/mlua_example/src/: lib.rs
lua/rust_lua_ffi_example/: Cargo.toml
lua/rust_lua_ffi_example/.cargo/: config
lua/rust_lua_ffi_example/src/: build.rs  lib.rs
nvim_utils/: Cargo.toml
nvim_utils/.cargo/: config
nvim_utils/src/: build.rs  lib.rs
