[package]
name = "lua_utils"
version = "0.1.0"
edition = "2021"
# build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
nvim-oxi = { git = "https://github.com/noib3/nvim-oxi", features = ["neovim-nightly"] }
